--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /.idea/
 /exercise/target/classes/
 /exercise/target/test-classes/
+/spidemo/spidemo.iml
+/2021.iml
+/algorithm/algorithm.iml
+/exercise/exercise.iml
+/tool/tool.iml
